# opentelementry

./: .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  LICENSE  README.md  buf.gen.example.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  workspace.protobuf.yaml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  question_support.yaml
.github/workflows/: ci.yaml  linter.yaml  release.yaml
docker/: Dockerfile  README.md  build.sh  entrypoint.sh  health_check.sh  supervisord.conf
docker/config/: alertmanager.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  grafana.ini  loki.yaml  otel-collector.yaml  prometheus-rules.yaml  prometheus.yaml  pyroscope.yaml  tempo.yaml
docker/envoy/: envoy.yaml
docs/: configuration.md
go/options/: logging.go  options.go
opentelementry-core/: .gitignore  README.md  compose.yaml
opentelementry-core/config/: grafana-dashboards.yaml  grafana-datasources.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
opentelementry-core/dashboards/: logging.dashboard.json  metrics.dashboard.json  profiling.dashboard.json  (+1 more)
opentelementry-cpp/: .env.example  BUILD.bazel  CMakeLists.txt  MODULE.bazel
opentelementry-cpp/examples/: BUILD.bazel  logging.cpp  logging_mcap.cpp  main.cpp  metrics.cpp  tracing.cpp
opentelementry-cpp/examples/bazel/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  main.cpp
opentelementry-cpp/include/opentelementry/: BUILD.bazel  config.hpp  opentelementry.hpp  platform.hpp
opentelementry-cpp/include/opentelementry/logging/: BUILD.bazel  formatter.hpp  logger.hpp
opentelementry-cpp/include/opentelementry/mcap/: BUILD.bazel  schemas.hpp  writer.hpp
opentelementry-cpp/include/opentelementry/metrics/: BUILD.bazel  metrics.hpp
opentelementry-cpp/include/opentelementry/otel/: BUILD.bazel  exporter.hpp
opentelementry-cpp/include/opentelementry/tracing/: BUILD.bazel  tracer.hpp
opentelementry-cpp/src/: BUILD.bazel  opentelementry.cpp
opentelementry-cpp/src/logging/: BUILD.bazel  logger.cpp
opentelementry-cpp/src/mcap/: BUILD.bazel  writer.cpp
opentelementry-cpp/src/metrics/: BUILD.bazel  metrics.cpp
opentelementry-cpp/src/otel/: BUILD.bazel  exporter.cpp
opentelementry-cpp/src/tracing/: BUILD.bazel  tracer.cpp
opentelementry-go/: .gitignore  README.md  go.mod  go.sum  go.work.sum  meter.go  opentelementry.go  opentelementry.toml.example
opentelementry-py/: .env.example  README.md  pyproject.toml
opentelementry-rs/: .env.example  Cargo.toml  README.md  opentelementry.module.toml.example  opentelementry.toml.example
opentelementry-rs/opentelementry-examples/: Cargo.toml  README.md
opentelementry-rs/opentelementry-examples/config/: module_levels.toml
opentelemetry/: .gitignore  README.md  compose.yaml
pulse-cpp/: .bazelrc  .env.example  CMakeLists.txt  MODULE.bazel
pulse-cpp/examples/: BUILD.bazel  logging.cpp  logging_mcap.cpp  main.cpp  metrics.cpp  tracing.cpp
pulse-cpp/examples/bazel/: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  main.cpp
pulse-cpp/include/pulse/: BUILD.bazel  config.hpp  platform.hpp  pulse.hpp
pulse-cpp/include/pulse/logging/: BUILD.bazel  formatter.hpp  logger.hpp
pulse-cpp/include/pulse/mcap/: BUILD.bazel  schemas.hpp  writer.hpp
pulse-cpp/include/pulse/metrics/: BUILD.bazel  metrics.hpp
pulse-cpp/include/pulse/otel/: BUILD.bazel  exporter.hpp
pulse-cpp/include/pulse/tracing/: BUILD.bazel  tracer.hpp
pulse-cpp/src/: BUILD.bazel  pulse.cpp
pulse-cpp/src/logging/: BUILD.bazel  logger.cpp
pulse-cpp/src/mcap/: BUILD.bazel  writer.cpp
pulse-cpp/src/metrics/: BUILD.bazel  metrics.cpp
pulse-cpp/src/otel/: BUILD.bazel  exporter.cpp
pulse-cpp/src/tracing/: BUILD.bazel  tracer.cpp
pulse-go/: .gitignore  README.md  go.mod  go.sum  pulse.go  pulse.toml.example
pulse-py/: .env.example  README.md  pyproject.toml
pulse-py/examples/logging/: mcap_example.py  simple_example.py
pulse-py/examples/metrics/: simple_example.py
pulse-py/examples/modules/: example.py
pulse-py/examples/tracing/: simple_example.py
pulse-py/pulse/: __init__.py  config.py  options.py  pulse.py
pulse-py/pulse/_private/: __init__.py
pulse-py/pulse/_private/foxglove/: __init__.py  mcap.py  schemas.py
pulse-py/pulse/_private/foxglove/schemas/: log.json  trace.json
pulse-py/pulse/_private/logging/: __init__.py  formatter.py  logger.py  mcap.py  otlp.py
pulse-py/pulse/_private/metrics/: __init__.py  decorators.py  metrics.py
pulse-py/pulse/_private/tracing/: __init__.py  context.py  decorator.py  decorators.py  span_context.py  tracing.py
pulse-rs/: .bazelrc  .env.example  Cargo.toml  MODULE.bazel  README.md  flake.nix  pulse.module.toml.example  pulse.toml.example  rust-toolchain.toml
pulse-rs/bazel/lib/: defs.bzl
pulse-rs/bazel/lib/private/: gen_env_file.bzl  gen_env_file.sh
pulse-rs/examples/: simple.rs
pulse-rs/pulse/: Cargo.toml
pulse-rs/pulse-derive/: Cargo.toml
pulse-rs/pulse-derive/src/: lib.rs
pulse-rs/pulse-examples/: Cargo.toml  README.md
pulse-rs/pulse-examples/config/: module_levels.toml
pulse-rs/pulse/examples/: logging.rs  logging_mcap.rs  metrics.rs  module_levels.rs  tracing.rs
pulse-rs/pulse/src/: config.rs  lib.rs  macros.rs
pulse-rs/pulse/src/derive/: mod.rs
pulse-rs/pulse/src/foxglove/: schemas.rs  writer.rs
pulse-rs/pulse/src/foxglove/schemas/: machanirobotics.metric.json  machanirobotics.trace.json
pulse-rs/pulse/src/logging/: formatter.rs  global.rs  log_builder.rs  logger.rs  macros.rs  mcap.rs  mod.rs  otel.rs
pulse-rs/pulse/src/metrics/: mcap.rs  metrics.rs  mod.rs
pulse-rs/pulse/src/options/: foxglove.rs  logging.rs  mod.rs  profiling.rs  pulse.rs  service.rs  telemetry.rs  tracing.rs
pulse-rs/pulse/src/telemetry/: provider.rs
pulse-rs/pulse/src/tracing/: mod.rs  tracing.rs
pulse-rs/pulse/src/traits/: mod.rs
pulse-rs/src/: config.rs  error.rs  lib.rs  log.rs  metrics.rs  options.rs  session.rs  trace.rs
(+219 files in other folders)
