"""
Bazel Project for Pulse Cpp SDK
"""

module(
    name = "pulse.cpp",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)
bazel_dep(name = "gazelle_cc", version = "0.5.0", dev_dependency = True)

bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "curl", version = "8.11.0.bcr.4")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "catch2", version = "3.12.0")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "freertos", version = "11.1.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0", dev_dependency = True)
bazel_dep(name = "opentelemetry-cpp", version = "1.24.0.bcr.1")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "mcap", version = "2.0.2")
