[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-py"
version = "0.1.0"
description = "Unified observability framework with logging, metrics, and tracing"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "logbook>=1.9.2",
    "mcap>=1.3.1",
    "protobuf>=7.34.1",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.0",
    "pydantic>=2.12.5",
    "dynaconf>=3.2.13",
]

[tool.hatch.build.targets.wheel]
packages = ["pulse"]
