[workspace]
members = ["pulse", "pulse-derive"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
pulse-derive = { path = "pulse-derive" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = "1.4.0"
mcap = "0.24.0"
opentelemetry = { version = "0.31.0", features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["logs", "trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["logs", "trace", "grpc-tonic", "http-proto", "reqwest-client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry-prometheus = "0.31.0"
prometheus = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
colored = "2.1"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
