load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "opentelementry",
    srcs = ["opentelementry.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//include/opentelementry",
        "//src/logging",
        "//src/mcap",
        "//src/metrics",
        "//src/otel",
        "//src/tracing",
    ],
)
