[package]
name = "pulse-examples"
version.workspace = true
edition.workspace = true
publish = false
description = "Runnable demos for Pulse — OTLP to localhost:12005 (gRPC)"

[dependencies]
pulse = { path = "../pulse" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true

[[bin]]
name = "logging"
path = "src/bin/logging.rs"

[[bin]]
name = "logging_mcap"
path = "src/bin/logging_mcap.rs"

[[bin]]
name = "metrics"
path = "src/bin/metrics.rs"

[[bin]]
name = "tracing"
path = "src/bin/tracing.rs"

[[bin]]
name = "module_levels"
path = "src/bin/module_levels.rs"
