[package]
name = "pulse"
version.workspace = true
edition.workspace = true

[dependencies]
pulse-derive.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
log4rs.workspace = true
mcap.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tonic = "0.14"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
prometheus.workspace = true
tokio.workspace = true
chrono.workspace = true
colored.workspace = true
figment.workspace = true

[[example]]
name = "logging"
path = "examples/logging.rs"

[[example]]
name = "logging_mcap"
path = "examples/logging_mcap.rs"

[[example]]
name = "metrics"
path = "examples/metrics.rs"
