module(
    name = "opentelementry-example",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.16")

# Local dependency on opentelementry.cpp
local_path_override(
    module_name = "opentelementry.cpp",
    path = "../opentelementry-cpp",
)

bazel_dep(name = "opentelementry.cpp", version = "1.0.0")
