load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "core",
    hdrs = [
        "config.hpp",
        "platform.hpp",
    ],
    defines = ["OPENTELEMENTRY_USE_OTEL=1"],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "opentelementry",
    hdrs = ["opentelementry.hpp"],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        "//include/opentelementry/logging",
        "//include/opentelementry/mcap",
        "//include/opentelementry/metrics",
        "//include/opentelementry/otel",
        "//include/opentelementry/tracing",
    ],
)
