load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "logging",
    srcs = ["logger.cpp"],
    implementation_deps = [
        "//include/opentelementry/logging",
        "//include/opentelementry/mcap",
        "//include/opentelementry/otel",
        "@opentelemetry-cpp//api",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)
