load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "metrics",
    srcs = ["metrics.cpp"],
    implementation_deps = [
        "//include/opentelementry/mcap",
        "//include/opentelementry/metrics",
        "//include/opentelementry/otel",
        "@opentelemetry-cpp//api",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)
