load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "tracing",
    srcs = ["tracer.cpp"],
    implementation_deps = [
        "//include/opentelementry/mcap",
        "//include/opentelementry/otel",
        "//include/opentelementry/tracing",
        "@opentelemetry-cpp//api",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)
