load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "core",
    hdrs = [
        "config.hpp",
        "platform.hpp",
    ],
    defines = ["PULSE_USE_OTEL=1"],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pulse",
    hdrs = ["pulse.hpp"],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        "//include/pulse/logging",
        "//include/pulse/mcap",
        "//include/pulse/metrics",
        "//include/pulse/otel",
        "//include/pulse/tracing",
    ],
)
