load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "logging",
    srcs = ["logger.cpp"],
    implementation_deps = [
        "//include/pulse/logging",
        "//include/pulse/mcap",
        "//include/pulse/otel",
        "@opentelemetry-cpp//api",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)
