load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "logging",
    hdrs = [
        "formatter.hpp",
        "logger.hpp",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
    deps = [
        "//include/opentelementry:core",
        "@opentelemetry-cpp//api",
        "@spdlog",
    ],
)
