load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "mcap",
    hdrs = [
        "schemas.hpp",
        "writer.hpp",
    ],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
    deps = [
        "//include/opentelementry:core",
        "//include/opentelementry/logging",
        "@mcap",
    ],
)
